# ngpasm

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-package.yml
docs/: CHANGELOG.md  conf.py  index.rst  loader.rst  mnemonics.rst  modules.rst  program.rst  registers.rst
docs/source/: arithmetic.rst  base.rst  modules.rst  registers.rst
examples/: example.py
src/ngpasm/: __init__.py  loader.py  program.py
src/ngpasm/mnemonics/: abc.py  arithmetic.py  base.py
src/ngpasm/registers/: __init__.py
tests/: test_arithmetic_mnemonics.py  test_loader.py  test_mnemonics.py  test_program.py  test_registers.py
